Preparata visualizzazione password - manca lowercase

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div id="my-password">
+
+        </div>
 
         <script type="text/javascript" src="js/scripts.js"></script>
     </body>
